--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <title>Rock Paper Scissor</title>
 </head>
 <body>
+    <h1>Rock Paper Scissor</h1>
     
-    <script>
-        
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
