Add header and a div tag

--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
     <title>Rock Paper Scissor</title>
 </head>
 <body>
-    <h1>Rock Paper Scissor</h1>
-  
+    <heder>
+        <h1>Rock Paper Scissor</h1>
+    </heder>
+    <div>
+
+    </div>
     
     <script src="script.js"></script>
 </body>
