Add style to scoreboard and edit style of h1

--- a/index.html
+++ b/index.html
@@ -10,16 +10,18 @@
 </head>
 <body>
     <heder>
-        <h1>RockPaperScissor</h1>
+        <h1><span style="color:#ff79c6;">Rock</span><span style="color:#f1fa8c;">Paper</span><span style="color: #8be9fd;">Scissor</span></h1>
     </heder>
         <div class="score-board">
             <h2>Scoreboard</h2>
+            <div class="container">
             <div class="player">Player
                 <div id="player-score">0</div>
             </div>
             <div class="barrier"></div>
             <div class="computer">Computer
                 <div id="computer-score">0</div>
+            </div>
             </div>
             
             
