Add styles to classes result and choices

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <p id="round-result"></p>
             <p id="result-msg">Make your move</p>
         </div>
-        <div>
+        <div class="choices">
             <span class="rock">
             <img src="./images/rock.png" alt="rock">
             </span>
