Add move updater

--- a/index.html
+++ b/index.html
@@ -27,6 +27,17 @@
             </div>
             </div>      
         </div>  
+        <div class="move-container">
+            <div class="player-move">
+                <img id="player-move" src="./images/rock.png" alt="rock">
+            </div>
+            <div class="move-barrier">
+                VS
+            </div>
+            <div class="computer-move">
+                <img id="computer-move" src="./images/rock.png" alt="rock">
+            </div>
+        </div>
         <div class="result">
             <p id="round-result"></p>
             <p id="result-msg">Make your move</p>
